<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.project.elt.ui.search.SearchStartActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchStartActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBack"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_button_with_border"
                android:padding="@dimen/btn_icon_padding"
                android:onClick="@{()->activity.onBackPressed()}"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_button_with_border"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search_for_elts"
                    android:padding="8dp"
                    android:textSize="16sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRecentSearches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/recent_searches"
            style="@style/TitleH1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rviewRecentSearches"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRecentSearches"
            tools:itemCount="3"
            android:visibility="gone"
            tools:listitem="@layout/cell_recent_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rviewSearchResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRecentSearches"
            tools:itemCount="3"
            tools:listitem="@layout/cell_search_suggestion" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoDataFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>