<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.project.elt.ui.products.ProductsActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFilters"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/secondary"
            android:clickable="true"
            android:contentDescription="Filters"
            android:focusable="true"
            android:src="@drawable/ic_filter"
            android:onClick="showDialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBack"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_button_with_border"
                android:padding="@dimen/btn_icon_padding"
                android:onClick="@{() -> activity.onBackPressed()}"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_button_with_border"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search_for_elts"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:padding="8dp"
                    android:onClick="redirectSearchPage"
                    android:textSize="16sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearFreePaidProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearSearch">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:id="@+id/imgFree"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_free" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvFree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/free"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="5dp"
                        android:id="@+id/imgPaid"
                        android:src="@drawable/ic_paid"
                        app:tint="@color/secondary" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/paid"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabMode="scrollable"
            app:layout_constraintTop_toBottomOf="@id/linearFreePaidProduct" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>